Support PORT env var (Render/PaaS) and configurable CORS origins for deployment